# mouse-behavior-analysis-tools

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
mouse_behavior_analysis_tools/: __init__.py
mouse_behavior_analysis_tools/model/: behavior_model.py
mouse_behavior_analysis_tools/plot/: make_figures.py
mouse_behavior_analysis_tools/utils/: custom_functions.py  misc_utils.py  model_utils.py  plot_utils.py
